styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Lato', sans-serif;
  font-size: 95%;
}


.custom-shape-divider-top-1624355291 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  overflow: hidden;
  line-height: 0;
  transform: rotate(180deg);
}

html {
  margin: 0%;
  padding: 0%;
  min-height: 100vh;
}

body {
  position: relative;
  min-height: 100vh;
  background-image: url(/images/bgi1.png);
  background-repeat: no-repeat;
  background-size: cover;
  /* background-color: rgb(57, 215, 255); */
  margin: 0%;
  padding: 0%;
}

.container.largest {
  max-width: 100%;
  height: fit-content;
  min-height: 100%;
  margin-top: 50px;
  padding:10px 20px;
}

.container.largest#blur.active {
  filter: blur(10px);
  user-select: none;
}

.navbar {
  text-transform: uppercase;
  opacity: 0.8;
  font-weight: bold;
}

.navoptions{
  font-size: 110%;
  color: #ffffff;
}

.quote {
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  font-family: "Source Code Pro", monospace;
  font-size: 210%;
  color: rgb(0, 0, 0);
}

.container#flex_box{
  display: inline-flex;
  padding: 0%;
}

.btn_plus {
  padding: 0 13px;
  border-radius: 50%;
  display: block;
  margin-left: 40%;
  margin-top: 0%;
  margin-bottom: 0%;
  border: none;
  font-size: 30px;
  background-color:  rgb(63, 182, 251);
  color: black;
}

.btn_plus:hover {
  box-shadow: 0 12px 16px 0 rgba(221, 219, 219, 0.24),
    0 17px 50px 0 rgba(0, 0, 0, 0.19);
  background-color: rgb(130, 223, 246);
  color: black;
}

#describe_box {
  width: 85%;
  margin: 10px 0;
  padding: 15px;
  background-color: rgb(245, 251, 251);
  border-radius: 0.65rem;
  box-shadow: 0 0.15rem 1.75rem 0 rgba(0, 0, 0, 0.801);
}

#due input{
  background-color: rgb(63, 182, 251);
  pad: 10%;
  border: none;
  border-radius: 5%;
  height: 45px;
  width: 45%;
}

input:focus, input:active { 
  border: none; outline: none; 
}

.row {
  margin: 5px;
  width: 100%;
  display: inline-flex;
}

.Dropdown{
  align-content: center;
  width: 2%;
  padding: 0%;
}

.Dropdown div{
  vertical-align:middle;
  height: 10px;
  width: 10px;
  background-color: black;
  margin: 50% 0;
  border-radius: 50%;
  transition: 0.3s;
}

.Dropdown div:hover{
  margin: 65% 0;
  transition: 00.3s;
}

#list_box {
  position: relative;
  width: 85%;
  transition: 00.3s;
  margin-top: 50px;
  padding: 10px;
  border-radius: 00.55rem;
  background-color: rgb(250, 248, 248);
}

#list_box:hover {
  box-shadow: 0 0.15rem 1.75rem 0 rgba(2, 2, 2, 0.801);
  border: 1px solid rgb(255, 255, 255);
  padding: 10px;
}


.list_title{
  width: 90%;
  padding: 0%;
}

#clear_list{
  width: fit-content;
  color: #111;
  border-color: rgb(135, 216, 248);
  transition: 0.3s;
  margin-right: 5%;
}

#clear_list:hover{
  background-color: rgb(134, 201, 240);
}

.table_data {
  padding: 3px;
  text-align: left;
  word-wrap: break-word;
  font-family: 'Indie Flower';
  font-size: 170%;
}

.table{
  margin: 0%;
}

#items{
  margin: 0%;
  width: 100%;
  padding: 0;
}

#table_body{
  font-family: 'Indie Flower';
}

#pop-up-window_desc {
  font-family: 'Indie Flower';
  font-weight: bold;
  font-size: 150%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 65%;
  height: fit-content;
  padding: 10px;
  visibility: hidden;
  opacity: 0;
  transition: 0.5s;
  word-wrap: break-word;
  background-color: rgb(241, 251, 251);
  border: 1px solid rgb(209, 209, 209);
  border-radius: 0.65rem;
  box-shadow: 0 0.15rem 1.75rem 0 rgba(189, 189, 192, 0.801);
}

#pop-up-window_desc.active {
  visibility: visible;
  opacity: 1;
  transition: 0.5s;
  word-wrap: break-word;
}

#drops{
  font-weight: bold;
  align-content: center;
  visibility: hidden;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(30%, -10%);
  width: 21%;
  height: fit-content;
  background-color: rgb(241, 251, 251);
  border: 1px solid rgb(255, 255, 255);
  border-radius: 0.65rem;
  box-shadow: 0 0.15rem 1.75rem 0 rgba(0, 0, 0, 0.801);
  opacity: 0;
  transition: 0.5s;
}

#drops.active{
  visibility: visible;
  opacity: 1;
  transition: 0.5s;
}

.droptions{
  border: none;
  display: block;
  margin: 5% 0;
  transition: 0.3s;
  padding: 6%;
  width: max-content;
}

.droptions:hover{
  background-color: rgb(185, 229, 255);
}

i {
  font-size: xx-large;
}

a#close,
#delete {
  /* width: fit-content; */
  border-radius: 1.00rem;
  position: relative;
  padding: 3px 5px;
  text-decoration: none;
  color: #fff;
  background: #111;
  display: inline-block;
  text-align: center;
  margin-top: 9%;
  margin-bottom: 0%;
}

a#delete {
  float: right;
}

/* Wavy style: bottom */
.custom-shape-divider-bottom-1624356674 {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  overflow: hidden;
  line-height: 0;
}

.custom-shape-divider-bottom-1624356674 svg {
  position: relative;
  display: block;
  width: calc(150% + 1.3px);
  height: 200px;
  transform: rotateY(180deg);
}

.custom-shape-divider-bottom-1624356674 .shape-fill {
  fill: #ffffff;
}


/* Media queries */
/** For mobile devices **/
@media (max-width: 767px){
  #list_box {
    box-shadow: 0 0.15rem 1.75rem 0 rgba(2, 2, 2, 0.801);
    border: 1px solid rgb(209, 209, 209);
    padding: 10px;
  }

  #drops{
    transform: translate(-5%, -50%);
    width: 27%;
  }

  .custom-shape-divider-bottom-1624356674 svg {
    width: calc(190% + 1.3px);
    height: 150px;
  }
}

/** For tablet devices **/
@media (min-width: 768px) and (max-width: 1023px){
  #list_box {
    background-color: rgb(250, 248, 248);
    box-shadow: 0 0.15rem 1.75rem 0 rgba(2, 2, 2, 0.801);
    border: 1px solid rgb(209, 209, 209);
    padding: 10px;
  }

  .custom-shape-divider-bottom-1624356674 svg {
    width: calc(141% + 1.3px);
    height: 214px;
  }
}

